updated p element to increase for responsiveness and fixed issue with text going blurry during transform animation on menu selection

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -41,6 +41,9 @@ p {
     font-family: $font-text;
     font-size: 1rem;
     font-weight: 300;
+    @media screen and (min-width: map-get($breakpoints, tablet)) {
+        font-size: 1.2rem;
+    }
 }
 
 button {
